// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders card with tag 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.5rem 0 2rem 0;
  min-height: 2rem;
}

.c0.c0 div:only-child {
  margin-left: auto;
}

<div
  data-cy="campaigns-card"
  style={
    Object {
      "backgroundColor": "#303641",
      "boxShadow": "rgba(68, 63, 63, 0.08) 0px -1px 1px 0px, rgba(68, 63, 63, 0.08) 0px 2px 6px 0px",
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "justifyContent": "space-between",
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2rem",
      }
    }
  >
    <div
      className="c0"
    >
      <img
        alt="placeholder logo"
        height="85"
        src="test-file-stub"
      />
      <div
        data-cy="stationary-tag"
        style={
          Object {
            "border": "1px solid",
            "padding": "0.25rem",
            "textTransform": "uppercase",
          }
        }
      >
        Stationary
      </div>
    </div>
    <div>
      <big
        data-cy="shortname"
        style={
          Object {
            "fontWeight": "bold",
            "marginTop": "0.5rem",
          }
        }
      >
        GCPEx
      </big>
      <p
        data-cy="longname"
      >
        GPM Cold Season Precipitation Experiment
      </p>
      <p
        data-cy="description"
      >
        description....
      </p>
    </div>
  </div>
</div>
`;

exports[`Card renders plain card 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.5rem 0 2rem 0;
  min-height: 2rem;
}

.c0.c0 div:only-child {
  margin-left: auto;
}

<div
  data-cy="campaigns-card"
  style={
    Object {
      "backgroundColor": "#303641",
      "boxShadow": "rgba(68, 63, 63, 0.08) 0px -1px 1px 0px, rgba(68, 63, 63, 0.08) 0px 2px 6px 0px",
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "justifyContent": "space-between",
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2rem",
      }
    }
  >
    <div
      className="c0"
    >
      <img
        alt="placeholder logo"
        height="85"
        src="test-file-stub"
      />
    </div>
    <div>
      <big
        data-cy="shortname"
        style={
          Object {
            "fontWeight": "bold",
            "marginTop": "0.5rem",
          }
        }
      >
        GCPEx
      </big>
      <p
        data-cy="longname"
      >
        GPM Cold Season Precipitation Experiment
      </p>
      <p
        data-cy="description"
      >
        description....
      </p>
    </div>
  </div>
</div>
`;

exports[`Card renders with footer list 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.5rem 0 2rem 0;
  min-height: 2rem;
}

.c0.c0 div:only-child {
  margin-left: auto;
}

<div
  data-cy="campaigns-card"
  style={
    Object {
      "backgroundColor": "#303641",
      "boxShadow": "rgba(68, 63, 63, 0.08) 0px -1px 1px 0px, rgba(68, 63, 63, 0.08) 0px 2px 6px 0px",
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "justifyContent": "space-between",
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2rem",
      }
    }
  >
    <div
      className="c0"
    >
      <img
        alt="placeholder logo"
        height="85"
        src="test-file-stub"
      />
    </div>
    <div>
      <big
        data-cy="shortname"
        style={
          Object {
            "fontWeight": "bold",
            "marginTop": "0.5rem",
          }
        }
      >
        GCPEx
      </big>
      <p
        data-cy="longname"
      >
        GPM Cold Season Precipitation Experiment
      </p>
      <p
        data-cy="description"
      >
        description....
      </p>
    </div>
  </div>
</div>
`;
